2003-12-10  Tim Waugh  <twaugh@redhat.com>
	* doc/omf.make: Fixed DESTDIR support.

2003-12-09  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py (FamilyView.new_child_after_edit): 
	call display_marriage instead of load_family. Prevents the 
	active person from being changed.
	* src/Plugins.py (PluginDialog.__init__): catch the attribute
	error that is thown if gtk does not support gtk_tooltips_data.get

2003-12-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/ru/getstart.xml: Translation update.
	* src/plugins/WriteGedcom.py (export_data): Correct researcher's 
	PHON field; (write_person): Correct exported PHON fields.
	* src/plugins/ReadGedcom.py (parse_residence): Remove PHON field since
	it is taken care of by parse_address() now; 
	(parse_address): Parse PHON field, provided it immediately follows
	ADDR structure. 
	* src/const.py.in: Add notes_formats list.
	* src/RelLib.py: Support format for the notes.
	* src/WriteXML.py: Support format for the notes.
	* src/GrampsParser.py: Support format for the notes.

2003-12-08  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: Add phone to address, postal code and phone to
	place
	* src/AddrEdit.py: Add phone number
	* src/EditPlace.py: Add phone number and postal code
	* src/LocEdit.py: Add phone number and postal code
	* src/edit_person.glade: Add postal code fields
	* src/dialog.glade: Add postal code and phone fields
	* src/places.glade: Add postal code
	* src/WriteXML.py: Add support for new place and postal code fields
	* src/GrampsParser.py: Add support for new place and postal code fields
	
2003-12-08  Richard Bos  <radoeka@xs4all.nl>
	* configure.in: catch the SUSE usage of "gnome.gconf" instead of
	the standard "gconf"

2003-12-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/de: Add directory for German manual 
	translation to CVS.
	* doc/gramps-manual/de/Makefile.am, Makefile.in: Add to CVS.